--- a/pages/login.html
+++ b/pages/login.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--link rel="stylesheet" type="text/css" href="css/login.css"-->
     <link rel="stylesheet" type="text/css" href="../css/login.css">
 </head>
 <body>
-    <div class="login-container">
-        <form>
+    <div class="container">
+        <div class="content">
+            <h3>Login Your Account</h3>
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <button>Login</button>
+            <p> Create an Account</p>
+        </div>
+
+        <div class="image">
+            <img src="/Images/instagram-01.png" width="400px" alt="">
+        </div>
+
+        
+    </div>
+
+    <!-- <div class="login-container">
+        <form class="login-form">
             <h1>Login</h1>
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <input type="submit" value="Login">
         </form>
-    </div>
+        <div class="image-container">
+            <img src="/Images/instagram-01.png" alt="Picture">
+        </div>
+    </div> -->
+    
 </body>
 </html>
