a couple of changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
+                <li><a href="pages/login.html">Login</a></li>
+                <li><a href="pages/addSupport.html">Add Support</a></li>
             </ul>
         </nav>
     </header>
@@ -21,12 +22,12 @@
     <main>
         <section>
             <h1>Welcome to Our Website!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt sapien quis sollicitudin aliquet. Morbi dapibus sapien ac lectus vestibulum.</p>
+            <p>We offer a centralised online platform for people to find and refer support in their local area. We provide bespoke research and marketing for organisations actively or seeking to set up groups in their chosen area.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2022 Our Website. All rights reserved.</p>
+        <p>&copy; 2023  Our Website. All rights reserved.</p>
     </footer>
 </body>
 </html>
