--- a/pages/registration.html
+++ b/pages/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
-    <link rel="css\registration.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\Praise\OneDrive\Desktop\Best-Friends\css\register.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="boxImg">
-            <img src="C:\Users\Administrator\OneDrive - Robert Gordon University\Team project\Best-Friends\Images\instagram-01.png" alt="image" width="500px" height="500px">
+            <img src="C:\Users\Praise\OneDrive\Desktop\Best-Friends\Images\instagram-01.png" alt="image" width="500px" height="500px">
         </div>
     </div>
 
