still in progress for the about us

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="pages\aboutUs.html">About</a></li>
                 <li><a href="/pages/contact.html">Contact</a></li>
                 <li><a href="pages/login.html">Login</a></li>
                 <li><a href="pages/addSupport.html">Add Support</a></li>
+
             </ul>
         </nav>
     </header>
@@ -27,7 +30,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023  Our Website. All rights reserved.</p>
+        <p>&copy; 2023 Our Website. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
