--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Praise\OneDrive\Desktop\Best-Friends\css\aboutus.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
     <title>About Us</title>
 </head>
 
