edited display support group information

--- a/pages/displaySupportInfo.html
+++ b/pages/displaySupportInfo.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" type= "text/css" href="../css/displaySupportInfo.css">
 
 
-    <title>More About <?= $fila['name'] ?> </title>
+    <title>More About Support Group </title>
     
 </head>
 <body>
-    <h1> !!!!! NAME OF THE SUPPORT</h1>
+    <h1> NAME OF THE SUPPORT (take it from DataBase)</h1>
 
     <div class="left-section2">
             
