--- a/pages/addOrganisation.html
+++ b/pages/addOrganisation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <title>Add Support</title>
+    <title>Add Organisation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/addSupport.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 <div class="container">
-    <h1>Add Group</h1>
+    <h1>Add Organisation</h1>
     <div class="container-fluid">
         <div class="row h-100">
         
@@ -18,7 +18,7 @@
                 <label for="email"></label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
                 <label for="address"></label>
-                <input type="address" class="form-control" id="address" name="address" placeholder="Location"><br>
+                <input type="Phone number" class="form-control" id="Phone number" name="Phone number" placeholder="Phone number"><br>
                 <div class="row">
                     <div class="col"><label for="logo">upload Image/Logo:</label>
                     <input type="file"id="logo"name="logo"></div>
@@ -34,7 +34,7 @@
                             <input type="text" id="linkedin" name="linkedin" placeholder="Enter your LinkedIn link">
             
   
-                            <button type="submit">Save</button>
+                            <button type="submit">Start Providing Support</button>
                             </form>
                         </div>
                     </div>
