--- a/pages/displaySupportInfo.html
+++ b/pages/displaySupportInfo.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <h1> NAME OF THE SUPPORT (take it from DataBase)</h1>
+    <h1> More Information About Support Group</h1>
 
     <div class="left-section2">
             
