--- a/pages/addOrganisation.html
+++ b/pages/addOrganisation.html
@@ -2,7 +2,7 @@
 <html>
     <title>Add Organisation</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../css/addSupport.css">
+<link rel="stylesheet" href="../css/addOrganisation.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <body>
@@ -20,7 +20,7 @@
                 <label for="address"></label>
                 <input type="Phone number" class="form-control" id="Phone number" name="Phone number" placeholder="Phone number"><br>
                 <div class="row">
-                    <div class="col"><label for="logo">upload Image/Logo:</label>
+                    <div class="col" ><label for="logo"> add Logo:</label>
                     <input type="file"id="logo"name="logo"></div>
                     <div class="col">
                         <form action="">
@@ -34,7 +34,7 @@
                             <input type="text" id="linkedin" name="linkedin" placeholder="Enter your LinkedIn link">
             
   
-                            <button type="submit">Start Providing Support</button>
+                            <button type="submit" class="Save">Add Social Media</button>
                             </form>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                 <form action="">
                     <label for="comment"></label>
                     <textarea class="form-control" rows="9" id="comment" name="text" placeholder="Group Info"></textarea><br>
-                    <button type="add" class="add-group">Add Group</button>
+                    <button type="add" class="add-group">Start Providing Support</button>
                   </form>
             </div>
         </div>
