added immediate support page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="../Best-Friends/pages/aboutUs.html">About us</a>
         <a href="../Best-Friends/pages/contact.html">Contact Us</a>
         <a href="../Best-Friends/pages/login.html">Login</a>
+        <a href="../Best-Friends/pages/immediateSupport.html">Immediate Support</a>
         <!-- Add more links as needed -->
     </nav>
 </header>
