--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Header and Search Bar</title>
-    <link rel="stylesheet" href="../Best-Friends/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
 <header>
     <div class="header-left">
-        <a><img class="logo" src="../Best-Friends/Images/logo.png"></a>
+        <a><img class="logo" src="Images/logo.png"></a>
         <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
     </div>
     <nav class="header-right">
-        <a href="../Best-Friends/pages/aboutUs.html">About us</a>
-        <a href="../Best-Friends/pages/contact.html">Contact Us</a>
-        <a href="../Best-Friends/pages/login.html">Login</a>
-        <a href="../Best-Friends/pages/immediateSupport.html">Immediate Support</a>
+        <a href="pages/aboutUs.html">About Us</a>
+        <a href="pages/contact.html">Contact Us</a>
+        <a href="pages/login.html" >Login</a>
+        <a href="pages/registration.html">Register</a>
+        <a href="pages/immediateSupport.html" >Immediate Support</a>
         <!-- Add more links as needed -->
     </nav>
 </header>
+
 
 <div class="search-bar">
     <input type="text" placeholder="Search...">
@@ -41,16 +43,16 @@
 <div class="group-container">
     <div class="group">
         <div class="groupContent">
-            <img class="groupImg" src="../Best-Friends/Images/img8.jpg" alt="Group 1 Image">
+            <img class="groupImg" src="Images/img8.jpg" alt="Group 1 Image">
         </div>
         <div class="groupContent">
-            <h3>Group 1</h3>
+            <h3>Sexy Yout Group 1</h3>
             <p>Description of Group 1</p>
         </div>
     </div>
     <div class="group">
         <div class="groupContent">
-            <img class="groupImg" src="../Best-Friends/Images/img8.jpg" alt="Group 2 Image">
+            <img class="groupImg" src="Images/img8.jpg" alt="Group 2 Image">
         </div>
         <div class="groupContent">
             <h3>Group 2</h3>
@@ -59,15 +61,26 @@
     </div>
     <div class="group">
         <div class="groupContent">
-            <img class="groupImg" src="../Best-Friends/Images/img8.jpg" alt="Group 2 Image">
+            <img class="groupImg" src="Images/img8.jpg" alt="Group 2 Image">
         </div>
         <div class="groupContent">
             <h3>Group 3</h3>
             <p>Description of Group 3</p>
         </div>
     </div>
+    
+    <div class="group">
+        <div class="groupContent">
+            <img class="groupImg" src="Images/img8.jpg" alt="Group 2 Image">
+        </div>
+        <div class="groupContent">
+            <h3>Group 4</h3>
+            <p>Description of Group 4</p>
+        </div>
+    </div>
     <!-- Add more groups as needed -->
 </div>
+
 
 </body>
 </html>
