--- a/pages/login.html
+++ b/pages/login.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="../css/login.css">
 </head>
+
+
 <body>
+
+
     <div class="container">
         <div class="content">
             <h3>Login Your Account</h3>
             <input type="text" placeholder="Username">
             <input type="password" placeholder="Password">
             <button>Login</button>
-            <p> Create an Account</p>
+            <p> <a href="registration.html"> Create an Account </a></p>
         </div>
 
         <div class="image">
