--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,19 @@
 <link rel="stylesheet" href="../css/contact.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <body>
+  <header>
+    <div class="header-left">
+        <a><img class="logo" src="Images/logo.png"></a>
+        <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
+    </div>
+    <nav class="header-right">
+        <a href="../pages/aboutUs.html">About Us</a>
+        <a href="../pages/login.html" >Login</a>
+        <a href="../pages/registration.html">Register</a>
+        <a href="../pages/immediateSupport.html" >Immediate Support</a>
+        <!-- Add more links as needed -->
+    </nav>
+</header>
   <h1 class="PageText">Contact Alturo</h1>
 <div class="container">
     
