Kobi - Navigation and footer done for main pages

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <nav class="header-right">
         <a href="pages/aboutUs.html">About Us</a>
         <a href="pages/contact.html">Contact Us</a>
-        <a href="pages/login.html" >Login</a>
         <a href="pages/registration.html">Register</a>
         <a href="pages/immediateSupport.html" >Immediate Support</a>
+        <a href="pages/login.html" >Login</a>
+        
         <!-- Add more links as needed -->
     </nav>
 </header>
@@ -46,7 +47,7 @@
             <img class="groupImg" src="Images/img8.jpg" alt="Group 1 Image">
         </div>
         <div class="groupContent">
-            <h3>Sexy Yout Group 1</h3>
+            <h3>Yout Group 1</h3>
             <p>Description of Group 1</p>
         </div>
     </div>
@@ -83,4 +84,9 @@
 
 
 </body>
+
+<footer>
+    <p>&copy; Alturo. All rights reserved.</p>
+</footer>
+
 </html>
