--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -17,12 +17,11 @@
             <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
         </div>
         <nav class="header-right">
-            <a href="index.html">Home</a>
-            <a href="./aboutUs.html">About Us</a>
+            <a href="..\index.html">Home</a>
             <a href="./contact.html">Contact Us</a>
-            <a href="./login.html" >Login</a>
-            <a href="./registration.html">Register</a>
+            <a href="../pages/registration.html">Register</a>
             <a href="./immediateSupport.html" >Immediate Support</a>
+            <a href="./login.html" >Login</a>
             <!-- Add more links as needed -->
         </nav>
     </header>
@@ -53,6 +52,7 @@
     </main>
     
 </body>
+
 <footer>
     <p>&copy; Alturo. All rights reserved.</p>
 </footer>
