--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/contact.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <body>
   <header>
     <div class="header-left">
@@ -11,14 +12,17 @@
         <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
     </div>
     <nav class="header-right">
+        <a href="..\index.html">Home</a>
         <a href="../pages/aboutUs.html">About Us</a>
-        <a href="../pages/login.html" >Login</a>
         <a href="../pages/registration.html">Register</a>
-        <a href="../pages/immediateSupport.html" >Immediate Support</a>
+        <a href="./immediateSupport.html" >Immediate Support</a>
+        <a href="../pages/login.html" >Login</a>
         <!-- Add more links as needed -->
     </nav>
 </header>
-  <h1 class="PageText">Contact Alturo</h1>
+
+
+  <h1 class="PageText">Contact Us</h1>
 <div class="container">
     
     <div class="leftContainer">
@@ -65,4 +69,10 @@
      
 </div>
 </body>
+
+
+<footer>
+  <p>&copy; Alturo. All rights reserved.</p>
+</footer>
+
 </html>
