--- a/pages/immediateSupport.html
+++ b/pages/immediateSupport.html
@@ -13,12 +13,31 @@
         <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
     </div>
     <nav class="header-right">
+        <a href="..\index.html">Home</a>
         <a href="../pages/aboutUs.html">About us</a>
         <a href="../pages/contact.html">Contact Us</a>
+        <a href="../pages/registration.html">Register</a>
         <a href="../pages/login.html">Login</a>
         <!-- Add more links as needed -->
     </nav>
 </header>
 
+    <div class="emptying">
+        <h3> Where are my links please!</h3>
+        <h3> Find them for me now!</h3>
+        <h3> We are meant to be helping not emptying!</h3>
+        
+        
+
+
+
+    </div>
+
+
 </body>
+
+
+<footer>
+    <p>&copy; Alturo. All rights reserved.</p>
+</footer>
 </html>
