--- a/pages/registration.html
+++ b/pages/registration.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-left">
+            <a><img class="logo" src="../Images/logo.png"></a>
+            <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
+        </div>
+        <nav class="header-right">
+            <a href="..\index.html">Home</a>
+            <a href="./aboutUs.html">About Us</a>
+            <a href="./contact.html">Contact Us</a>
+            <a href="./immediateSupport.html" >Immediate Support</a>
+            <a href="./login.html" >Login</a>
+            <!-- Add more links as needed -->
+        </nav>
+    </header>
+
     <div class="container">
         <div class="register">
             <h1>Welcome! Let's get you started</h1>
@@ -40,5 +55,11 @@
 
 
 </body>
+
+
+
+<footer>
+    <p>&copy; Alturo. All rights reserved.</p>
+</footer>
 
 </html>
