--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
             <input type="text" placeholder="Username">
             <input type="password" placeholder="Password">
             <button>Login</button>
-            <p> <a href="registration.html"> Create an Account </a></p>
+            <p> <a href="registration.html"> Please Create an Account </a></p>
         </div>
 
         <div class="image">
