mended these pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,11 +12,11 @@
         <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
     </div>
     <nav class="header-right">
-        <a href="pages/aboutUs.html">About Us</a>
-        <a href="pages/index.html">Home</a>
-        <a href="pages/registration.html">Register</a>
-        <a href="pages/immediateSupport.html" >Immediate Support</a>
-        <a href="pages/login.html" >Login</a>
+        <a href="..\index.html">Home</a>
+        <a href="./aboutUs.html">About Us</a>
+        <a href="./registration.html">Register</a>
+        <a href="./immediateSupport.html" >Immediate Support</a>
+        <a href="./login.html" >Login</a>
         
         <!-- Add more links as needed -->
     </nav></header>
