upgraded versions of support group information

--- a/pages/addSupportInfo.html
+++ b/pages/addSupportInfo.html
@@ -25,8 +25,6 @@
             <a href="./aboutUs.html">About Us</a>
             <a href="./contact.html">Contact Us</a>
             <a href="./immediateSupport.html" >Immediate Support</a>
-            <a href="./login.html" >Login</a>
-            <a href="./registration.html" >Sign In</a>
             <!-- Add more links as needed -->
         </nav>
     </header>
@@ -69,7 +67,7 @@
 
         
             <div class = "form-group">
-                <label for="picture"> Upload Picture(s): </label>
+                <label for="picture"> Upload Picture(s) </label>
                 <input type="file" class="file-control" id="pic" name="picture" accept="image/*" required>
         
             </div>
