immediate support links added

--- a/pages/immediateSupport.html
+++ b/pages/immediateSupport.html
@@ -25,9 +25,27 @@
     </header>
 
     <div class="emptying">
-        <h3> Where are my links please!</h3>
-        <h3> Find them for me now!</h3>
-        <h3> We are meant to be helping not emptying!</h3>
+        <h3> Phone NHS 24 on 111 if you’re:</h3>
+        <ul>
+            <li>feeling distressed</li>
+            <li>in a state of despair</li>
+            <li>suicidal</li>
+            <li>in need of emotional support</li>
+            <li><a href = "https://www.nhsinform.scot/illnesses-and-conditions/mental-health/mental-health-support/mental-health-services-at-nhs-24/#:~:text=Phone%20NHS%2024%20on%20111%20if%20you're%3A&text=in%20need%20of%20emotional%20support">read more</a></li>
+        </ul>
+        <h3> For an emergency ambulance phone 999</h3>
+        <h3>Samaritans:</h3>
+        <ul>
+            <li>call 116 123</li>
+            <li>email: jo@samaritans.org for a reply within 24 hours</li>
+            <li><a href = "https://www.samaritans.org/?nation=scotland">read more</a></li>
+        </ul>
+        <h3>shout:</h3>
+        <ul>
+            <li>TEXT 'SHOUT' TO 85258</li>
+            <li><a href = "https://giveusashout.org/">read more</a></li>
+        </ul>
+       
 
 
 
