--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
     <title>Contact</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../css/contact.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+      <style>
+        body{
+          background-color: #D3D3D3;
+        }
+      </style>
+    </head>
 
 <body>
   <header>
     <div class="header-left">
         <a><img class="logo" src="../Images/logo.png"></a>
-        <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
+        <h1 style="display: inline; align-items: center; font-size: 18px;">Alturo</h1>
     </div>
     <nav class="header-right">
         <a href="..\index.html">Home</a>
